; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb/extr_af9005.c_af9005_pid_filter_control.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb/extr_af9005.c_af9005_pid_filter_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_usb_adapter = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"pid filter control  onoff %d\0A\00", align 1
@XD_MP2IF_DMX_CTRL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"pid filter control ok\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_usb_adapter*, i32)* @af9005_pid_filter_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @af9005_pid_filter_control(%struct.dvb_usb_adapter* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dvb_usb_adapter*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.dvb_usb_adapter* %0, %struct.dvb_usb_adapter** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i32 (i8*, ...) @deb_info(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %37

11:                                               ; preds = %2
  %12 = load %struct.dvb_usb_adapter*, %struct.dvb_usb_adapter** %4, align 8
  %13 = getelementptr inbounds %struct.dvb_usb_adapter, %struct.dvb_usb_adapter* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @XD_MP2IF_DMX_CTRL, align 4
  %16 = call i32 @af9005_write_ofdm_register(i32 %14, i32 %15, i32 1)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %11
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %3, align 4
  br label %50

21:                                               ; preds = %11
  %22 = load %struct.dvb_usb_adapter*, %struct.dvb_usb_adapter** %4, align 8
  %23 = getelementptr inbounds %struct.dvb_usb_adapter, %struct.dvb_usb_adapter* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @XD_MP2IF_DMX_CTRL, align 4
  %26 = call i32 @af9005_write_register_bits(i32 %24, i32 %25, i32 1, i32 1, i32 1)
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %21
  %30 = load i32, i32* %6, align 4
  store i32 %30, i32* %3, align 4
  br label %50

31:                                               ; preds = %21
  %32 = load %struct.dvb_usb_adapter*, %struct.dvb_usb_adapter** %4, align 8
  %33 = getelementptr inbounds %struct.dvb_usb_adapter, %struct.dvb_usb_adapter* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* @XD_MP2IF_DMX_CTRL, align 4
  %36 = call i32 @af9005_write_ofdm_register(i32 %34, i32 %35, i32 1)
  store i32 %36, i32* %6, align 4
  br label %43

37:                                               ; preds = %2
  %38 = load %struct.dvb_usb_adapter*, %struct.dvb_usb_adapter** %4, align 8
  %39 = getelementptr inbounds %struct.dvb_usb_adapter, %struct.dvb_usb_adapter* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* @XD_MP2IF_DMX_CTRL, align 4
  %42 = call i32 @af9005_write_ofdm_register(i32 %40, i32 %41, i32 0)
  store i32 %42, i32* %6, align 4
  br label %43

43:                                               ; preds = %37, %31
  %44 = load i32, i32* %6, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %46, label %48

46:                                               ; preds = %43
  %47 = load i32, i32* %6, align 4
  store i32 %47, i32* %3, align 4
  br label %50

48:                                               ; preds = %43
  %49 = call i32 (i8*, ...) @deb_info(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %50

50:                                               ; preds = %48, %46, %29, %19
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @deb_info(i8*, ...) #1

declare dso_local i32 @af9005_write_ofdm_register(i32, i32, i32) #1

declare dso_local i32 @af9005_write_register_bits(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
